Updated About Us

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">About Us</h1>
+            <h1 class="mb-3 bread">What Do we Do</h1>
             <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us <i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
@@ -76,7 +76,7 @@
 
   <br><br>Established in 2012, Global Design Cell originated with the idea of building a team of highly skilled professionals located at different geographical locations yet who stay firmly connected and jointly cater to the needs of the clients spread globally.<br><br>
 
-  Global Design Cell has so far worked on a variety of Residential, Public, and Commercial projects and it is growing fast with its skilled and motivated professionals who have experience of designing almost all kinds of buildings.
+  Global Design Cell has so far worked on a variety of  Public, Residential and Commercial projects and it is growing fast with its skilled and motivated professionals who have experience of designing almost all kinds of buildings.
 
   <br><br>
   As a team, we are a small firm practicing thoughtful, specific, contemporary design for discriminating and highly involved clients.<br><br>
